# tracerail-bootstrap

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  rules.yaml
cli/: start_example.py
dmn/: routing.dmn
docs/: ARCHITECTURE.md  SYSTEM_BLUEPRINT.md  TECH_DEBT.md  architecture.md
examples/basic/: temporal_example.py
observability/: prometheus.yml
observability/grafana/dashboards/: tracerail.json
observability/grafana/provisioning/datasources/: prometheus.yml
task_bridge/app/: bridge.py
workers/: activities.py  worker.py  workflows.py
